--- a/countdown-timer/assets/css/style.css
+++ b/countdown-timer/assets/css/style.css
@@ -15,16 +15,19 @@ body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	/* justify-content: center; */
+	justify-content: center;
 }
 
 .countdown-container {
 	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
 }
 
 h1 {
+	margin-top: -10rem;
 	font-size: 4rem;
-	margin-top: 5rem;
 	font-weight: normal;
 }
 
